@@ -56,16 +56,15 @@ struct save_logline_values {
   char logline_marker_label[65];
   char logline_origin_user[256];
   struct tm logline_origin_datetime;
-
   int  logline_event_length;
   char logline_link_event_name[65];
-  char logline_link_starttime[13];
+  struct tm logline_link_starttime;
   int  logline_link_length;
   int  logline_link_start_slop;
   int  logline_link_end_slop;
   int  logline_link_id;
   int  logline_link_embedded;
-  char logline_ext_starttime[13];
+  struct tm logline_ext_starttime;
   int  logline_ext_length;
   char logline_ext_cart_name[33];
   char logline_ext_data[33];
